k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soap-api
  labels:
    app: soap-api
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: soap-api
  type: ClusterIP
