k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: soap-api
  labels:
    app: soap-api
spec:
  to:
    kind: Service
    name: soap-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
